kubernetes.tf

provider "kubernetes" {
  load_config_file       = "false"
  host                   = data.aws_eks_cluster.cluster.endpoint
  token                  = data.aws_eks_cluster_auth.cluster.token
  cluster_ca_certificate = base64decode(data.aws_eks_cluster.cluster.certificate_authority.0.data)
}

 resource "kubernetes_deployment" "nginx" {
  metadata {
    name = "scalable-nginx-example"
    labels = {
      App = "ScalableNginxExample"
    }
  }

  spec {
    replicas = 2
    selector {
      match_labels = {
        App = "ScalableNginxExample"
      }
    }
    template {
      metadata {
        labels = {
          App = "ScalableNginxExample"
        }
      }
      spec {
        container {
          image = "nginx:1.7.8"
          name  = "example"

          port {
            container_port = 80
          }

          resources {
            limits {
              cpu    = "0.5"
              memory = "512Mi"
            }
            requests {
              cpu    = "250m"
              memory = "50Mi"
            }
          }
        }
      }
    }
  }
}

resource "kubernetes_service" "nginx" {
  metadata {
    name = "nginx-example"
    labels = {
      app = "nginx"
    }
  }
  spec {
    selector = {
      App = kubernetes_deployment.nginx.spec.0.template.0.metadata[0].labels.App
    }
    port {
      port        = 80
      target_port = 80
    }

    type = "LoadBalancer"
  }
}


resource "kubernetes_deployment" "bucketlist" {
  metadata {
    name = "bucketlist"
    labels = {
      App = "bucketlist"
    }
  }

  spec {
    replicas = 2
    strategy {
      type = "Recreate"
    }
    selector {
      match_labels = {
        App = "bucketlist"
      }
    }
    template {
      metadata {
        labels = {
          App = "bucketlist"
        }
      }
      spec {
        container {
          image = "ontaptom/bucketlist:0.2"
          name  = "bucketlist"

          port {
            container_port = 80
          }

          resources {}

          volume_mount {
              name       = "bucketlist-storage"
              mount_path = "/app-storage"
            }
        }
          volume {
            name = "bucketlist-storage"
            persistent_volume_claim {
            claim_name = kubernetes_persistent_volume_claim.example.metadata.0.name
          }
        }
      }
    }
  }
}

resource "kubernetes_service" "bucketlist" {
  metadata {
    name = "bucketlist-example"
  }
  spec {
    selector = {
      App = kubernetes_deployment.bucketlist.spec.0.template.0.metadata[0].labels.App
    }
    port {
      port        = 80
      target_port = 80
    }

    type = "LoadBalancer"
  }
}
